--- a/proyecto/servicios/templates/servicios/servicios.html
+++ b/proyecto/servicios/templates/servicios/servicios.html
@@ -2,13 +2,25 @@
 
 {% load static %}
 
-
 {% block content %}
     {% for s in ser %}
-        <div>
-            <h2>{{s.titulo}}</h2>
-            <h3>{{s.contenido}}</h3>
+
+    <section class="page-section clearfix">
+        <div class="container">
+          <div class="intro">
+            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{{s.imagen.url}}" style="height: 65%;">
+            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+              <h2 class="section-heading mb-4" >
+                <span class="section-heading-upper">{{s.titulo}}</span>
+                <span class="section-heading-lower">{{s.contenido}}</span>
+              </h2>
+          
+            </div>
+          </div>
         </div>
+      </section>
+
+        
     {% endfor %}
 
 {% endblock content %}
